// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Window render !autoStretch 1`] = `
<div
  class="Component-window-0-1-1 Component-windowBright-0-1-3"
>
  Hello
</div>
`;

exports[`Window render dark 1`] = `
<div
  class="Component-window-0-1-1 Component-windowDark-0-1-4 Component-windowAutoStretch-0-1-2"
>
  Hello
</div>
`;

exports[`Window render default 1`] = `
<div
  class="Component-window-0-1-1 Component-windowBright-0-1-3 Component-windowAutoStretch-0-1-2"
>
  Hello
</div>
`;

exports[`Window render fullscreen 1`] = `
<div
  class="Component-window-0-1-1 Component-windowBright-0-1-3 Component-windowAutoStretch-0-1-2 Component-windowFullscreen-0-1-5"
>
  Hello
</div>
`;

exports[`Window render with className 1`] = `
<div
  class="Component-window-0-1-1 Component-windowBright-0-1-3 test Component-windowAutoStretch-0-1-2"
>
  Hello
</div>
`;
